[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17"
quick-xml = { version = "0.28", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = "0.6.0"
indicatif = { version = "0.17", features = ["rayon"] }
toml = "0.7.4"
rayon = "1.7.0"
